--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -16,9 +16,11 @@
     </header>
     <main> 
         <h2> Overview</h2>
-        <h3> element with porpose as the text</h3>
-        <p> the element will contain the purpose text</p>
-        <h3> element with Audience as the text</h3>
+        <h3> the purpose is the help  our customers to book a tour very easily and quick and simple way and
+            also to held them see our diffent activities we offer </h3>
+        <p> help  our customers to book a tour very easily and quick and simple way and
+            also to held them see our  diffent activities we offer </p>
+        <h3> element</h3>
         <p> target audience text </p>
         <h2> Branding</h2>
         <h3> Website Logo</h3>
